--- a/aoc/2024-7.html
+++ b/aoc/2024-7.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 7 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,32 +154,134 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-7"><a class="header" href="#advent-of-code---year-2024-day-7">Advent of code - Year 2024 Day 7</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/7">day 7</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming languange</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readibility of the code.</p>
-<p><img src="https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/illustrations/png/2.png" alt="Gopher this is fine" /></p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-<li><a href="2024-6.html">Day 6</a></li>
-<li><a href="2024-7.html">Day 7</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>Generally we proceed by recursion. That is we pass the <code>equation</code>, <code>index</code> and <code>accumulator</code>. Then we continue and both use <code>+</code> and <code>*</code> operations. If we have <code>accumulator &gt; result</code> we cut of the computation.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we only add <code>concat(int, int) int</code> function. Today I also implement it with <code>goroutines</code>.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strconv"
+  "strings"
+  "time"
+)
+
+type Equation struct {
+  result int
+  operands []int
+}
+
+func read_file(file_path string) []Equation {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  lines := strings.Split(string(content), "\n")
+  var equations []Equation
+  for _, line := range lines {
+    if len(line) == 0 {
+      continue
+    }
+    parts := strings.Split(line, " ")
+    result, _ := strconv.Atoi(parts[0][:len(parts[0])-1])
+    var numbers []int
+    for _, part := range parts[1:] {
+      nr, _ := strconv.Atoi(part)
+      numbers = append(numbers, nr)
+    }
+    equations = append(equations, Equation{result, numbers})
+  }
+  return equations
+}
+
+func concat(x int, y int) int {
+  res, _ := strconv.Atoi(strconv.Itoa(x) + strconv.Itoa(y))
+  return res
+}
+
+func solve(eq Equation, acc int, i int) bool{
+  if i &lt; len(eq.operands) &amp;&amp; acc &gt; eq.result {
+    return false
+  }
+  if i == len(eq.operands) {
+    return eq.result == acc
+  }
+  return solve(eq, acc + eq.operands[i], i+1) || solve(eq, acc * eq.operands[i], i+1)
+}
+
+func solve_concat(eq Equation, acc int, i int) bool {
+  if i &lt; len(eq.operands) &amp;&amp; acc &gt; eq.result {
+    return false
+  }
+  if i == len(eq.operands) {
+    return eq.result == acc
+  }
+  return solve_concat(eq, acc + eq.operands[i], i+1) || solve_concat(eq, acc * eq.operands[i], i+1) || solve_concat(eq, concat(acc, eq.operands[i]), i+1)
+}
+
+func common_solve(eq Equation, solver func(Equation, int, int) bool, c chan int) {
+  if solver(eq, 0, 0) {
+    c &lt;- eq.result
+  } else {
+    c &lt;- 0
+  }
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  equations := read_file("INPUT")
+  c := make(chan int)
+  for _, eq := range equations {
+    go common_solve(eq, solve, c)
+  }
+  for i := 0; i &lt; len(equations); i++ {
+    result += &lt;-c
+  }
+  close(c)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  equations := read_file("INPUT")
+  c := make(chan int)
+  for _, eq := range equations {
+    go common_solve(eq, solve_concat, c)
+  }
+  for i := 0; i &lt; len(equations); i++ {
+    result += &lt;-c
+  }
+  close(c)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 7 - Bridge Repair")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-6.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -189,11 +291,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-6.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
