--- a/aoc/2024-8.html
+++ b/aoc/2024-8.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 8 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,33 +154,130 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-8"><a class="header" href="#advent-of-code---year-2024-day-8">Advent of code - Year 2024 Day 8</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/8">day 8</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming languange</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readibility of the code.</p>
-<p><img src="https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/illustrations/png/2.png" alt="Gopher this is fine" /></p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-<li><a href="2024-6.html">Day 6</a></li>
-<li><a href="2024-7.html">Day 7</a></li>
-<li><a href="2024-8.html">Day 8</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>For both cases we go through the map and collect the positions of each antenna type. Then in the first part we go through the antennas of the same type and take two of them. Calculating their difference and later on using this difference to either <code>subtrack</code> or <code>add</code> to the position of antenna. Only checking if it is inside a map, if so add it to the list of nodes. Finally return the size of collected nodes.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we use similar approach only that we also add the given antennas to the list of nodes. Then we do not calculate just one antinode, but instead loop until we jump out of the map. With the same difference and operation.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strings"
+  "time"
+)
+
+type Position [2]int
+
+func read_file(file_path string) (map[string][]Position, int) {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  m := make(map[string][]Position)
+  size := 0
+  for i, line := range strings.Split(string(content), "\n") {
+    if len(line) == 0 {
+      continue
+    }
+    size += 1
+    chars := strings.Split(line, "")
+    for j, c := range chars {
+      if c != "." {
+        val, ok := m[c]
+        if ok {
+          m[c] = append(val, [2]int{i, j})
+        } else {
+          m[c] = []Position{[2]int{i,j}}
+        }
+      }
+    }
+  }
+  return m, size
+}
+
+func is_in_map(pos Position, size int) bool {
+  return pos[0] &gt;= 0 &amp;&amp; pos[1] &gt;= 0 &amp;&amp; pos[0] &lt; size &amp;&amp; pos[1] &lt; size
+}
+
+func add_antinode(nodes *map[[2]int]bool, antenna, diff Position, op func(int, int) int, size int, first_only bool) {
+  antinode := [2]int{op(antenna[0], diff[0]), op(antenna[1], diff[1])}
+  for is_in_map(antinode, size) {
+    (*nodes)[antinode] = true
+    if first_only {
+      return
+    }
+    antinode = [2]int{op(antinode[0], diff[0]), op(antinode[1], diff[1])}
+  }
+}
+
+func add_nodes(nodes *map[[2]int]bool, first_antenna, second_antenna Position, size int, first_only bool) {
+  diff := [2]int{first_antenna[0] - second_antenna[0], first_antenna[1] - second_antenna[1]}
+  if !first_only {
+    (*nodes)[first_antenna] = true
+    (*nodes)[second_antenna] = true
+  }
+  add := func(x int, y int) int {return x + y;}
+  sub := func(x int, y int) int {return x - y;}
+  add_antinode(nodes, first_antenna, diff, add, size, first_only)
+  add_antinode(nodes, second_antenna, diff, sub, size, first_only)
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  m, size := read_file("INPUT")
+  nodes := make(map[[2]int]bool)
+  for _, antennas := range m {
+    for i := 0; i &lt; len(antennas) -1; i++ {
+      for j := i + 1; j &lt; len(antennas); j++{
+        add_nodes(&amp;nodes, antennas[i], antennas[j], size, true)
+      }
+    }
+  }
+  result = len(nodes)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  m, size := read_file("INPUT")
+  nodes := make(map[[2]int]bool)
+  for _, antennas := range m {
+    for i := 0; i &lt; len(antennas) -1; i++ {
+      for j := i + 1; j &lt; len(antennas); j++{
+        add_nodes(&amp;nodes, antennas[i], antennas[j], size, false)
+      }
+    }
+  }
+  result = len(nodes)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 8 - Resonant Collinearity")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-7.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -190,11 +287,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-7.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
