--- a/aoc/2024-10.html
+++ b/aoc/2024-10.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2023 - Personal page</title>
+        <title>Year 2024 day 10 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,46 +154,137 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2023"><a class="header" href="#advent-of-code---year-2023">Advent of code - Year 2023</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2023">year 2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2023-1.html">Day 1</a></li>
-<li><a href="2023-2.html">Day 2</a></li>
-<li><a href="2023-3.html">Day 3</a></li>
-<li><a href="2023-4.html">Day 4</a></li>
-<li><a href="2023-5.html">Day 5</a></li>
-<li><a href="2023-6.html">Day 6</a></li>
-<li><a href="2023-7.html">Day 7</a></li>
-<li><a href="2023-8.html">Day 8</a></li>
-<li><a href="2023-9.html">Day 9</a></li>
-<li><a href="2023-10.html">Day 10</a></li>
-<li><a href="2023-11.html">Day 11</a></li>
-<li><a href="2023-12.html">Day 12</a></li>
-<li><a href="2023-13.html">Day 13</a></li>
-<li><a href="2023-14.html">Day 14</a></li>
-<li><a href="2023-15.html">Day 15</a></li>
-<li><a href="2023-16.html">Day 16</a></li>
-<li><a href="2023-17.html">Day 17</a></li>
-<li><a href="2023-18.html">Day 18</a></li>
-<li><a href="2023-19.html">Day 19</a></li>
-<li><a href="2023-20.html">Day 20</a></li>
-<li><a href="2023-21.html">Day 21</a></li>
-<li><a href="2023-22.html">Day 22</a></li>
-<li><a href="2023-23.html">Day 23</a></li>
-<li><a href="2023-24.html">Day 24</a></li>
-<li><a href="2023-25.html">Day 25</a></li>
-</ul>
+                        <h1 id="advent-of-code---year-2024-day-10"><a class="header" href="#advent-of-code---year-2024-day-10">Advent of code - Year 2024 Day 10</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/10">day 10</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>In the first part we use recursion on the nighbours. But beforehand we check if the value is <code>9</code>, if so add it to the <code>map</code>. We also check if neighbours are indeed inside of the map and if the value on this place is <code>1</code> higher than the current one.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In this case we do not need <code>map</code> and just return on if <code>9</code> was found, and recourse on counting such cases. That is we get to the nine number as many times as there are distinct paths.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strconv"
+  "strings"
+  "time"
+)
+
+func read_file(file_path string) [][]int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  lines := strings.Split(string(content), "\n")
+  var m [][]int
+  for _, line := range lines {
+    if len(line) == 0 {
+      continue
+    }
+    tiles := strings.Split(line, "")
+    row := make([]int, len(tiles))
+    for i, tile := range tiles {
+      row[i], _ = strconv.Atoi(tile)
+    }
+    m = append(m, row)
+  }
+  return m
+}
+
+func get_neighbours(x, y int) [4][2]int {
+  return [4][2]int{
+    {x + 1, y},
+    {x - 1, y},
+    {x, y + 1},
+    {x, y - 1},
+  }
+}
+
+func in_map(m *[][]int, x, y int) bool {
+  return x &gt;= 0 &amp;&amp; y &gt;= 0 &amp;&amp; x &lt; len(*m) &amp;&amp; y &lt; len((*m)[0])
+}
+
+func find_trails(m *[][]int, x, y int) map[[2]int]bool {
+  if (*m)[x][y] == 9 {
+    res := make(map[[2]int]bool)
+    res[[2]int{x, y}] = true
+    return res
+  }
+  res := make(map[[2]int]bool)
+  neighbours := get_neighbours(x, y)
+  for _, neigh := range neighbours {
+    if in_map(m, neigh[0], neigh[1]) &amp;&amp; (*m)[neigh[0]][neigh[1]] == (*m)[x][y]+1 {
+      for key, val := range find_trails(m, neigh[0], neigh[1]) {
+        res[key] = val
+      }
+    }
+  }
+  return res
+}
+
+func find_distinct(m *[][]int, x, y int) int {
+  if (*m)[x][y] == 9 {
+    return 1
+  }
+  res := 0
+  neighbours := get_neighbours(x, y)
+  for _, neigh := range neighbours {
+    if in_map(m, neigh[0], neigh[1]) &amp;&amp; (*m)[neigh[0]][neigh[1]] == (*m)[x][y]+1 {
+      res += find_distinct(m, neigh[0], neigh[1])
+    }
+  }
+  return res
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  m := read_file("INPUT")
+  for i, row := range m {
+    for j := range row {
+      if m[i][j] == 0 {
+        result += len(find_trails(&amp;m, i, j))
+      }
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  m := read_file("INPUT")
+  for i, row := range m {
+    for j := range row {
+      if m[i][j] == 0 {
+        result += find_distinct(&amp;m, i, j)
+      }
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 10 - Hoof It")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-10.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-9.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -203,11 +294,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-10.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-9.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
