--- a/aoc/2024-11.html
+++ b/aoc/2024-11.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2023 - Personal page</title>
+        <title>Year 2024 day 11 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,46 +154,125 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2023"><a class="header" href="#advent-of-code---year-2023">Advent of code - Year 2023</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2023">year 2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2023-1.html">Day 1</a></li>
-<li><a href="2023-2.html">Day 2</a></li>
-<li><a href="2023-3.html">Day 3</a></li>
-<li><a href="2023-4.html">Day 4</a></li>
-<li><a href="2023-5.html">Day 5</a></li>
-<li><a href="2023-6.html">Day 6</a></li>
-<li><a href="2023-7.html">Day 7</a></li>
-<li><a href="2023-8.html">Day 8</a></li>
-<li><a href="2023-9.html">Day 9</a></li>
-<li><a href="2023-10.html">Day 10</a></li>
-<li><a href="2023-11.html">Day 11</a></li>
-<li><a href="2023-12.html">Day 12</a></li>
-<li><a href="2023-13.html">Day 13</a></li>
-<li><a href="2023-14.html">Day 14</a></li>
-<li><a href="2023-15.html">Day 15</a></li>
-<li><a href="2023-16.html">Day 16</a></li>
-<li><a href="2023-17.html">Day 17</a></li>
-<li><a href="2023-18.html">Day 18</a></li>
-<li><a href="2023-19.html">Day 19</a></li>
-<li><a href="2023-20.html">Day 20</a></li>
-<li><a href="2023-21.html">Day 21</a></li>
-<li><a href="2023-22.html">Day 22</a></li>
-<li><a href="2023-23.html">Day 23</a></li>
-<li><a href="2023-24.html">Day 24</a></li>
-<li><a href="2023-25.html">Day 25</a></li>
-</ul>
+                        <h1 id="advent-of-code---year-2024-day-11"><a class="header" href="#advent-of-code---year-2024-day-11">Advent of code - Year 2024 Day 11</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/11">day 11</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>The first part can be done by brute force, that is going in an array and splitting, changing the numbers. Tho this is not a good approach. See part 2 for more info.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>Generally it is better to hold the number of same stones, since the operation for these stones will be exactly same, so we will instead move all such stones at once. This is under the assumption, that there will be many stones of the same number, because otherwise it will be the same as brute-forcing it. Therefore we create a map for stones as key and we do operation for all keys and add the value to the new number. But it is better to create a new map instead of making it in place.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+func read_file(file_path string) []int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  var stones []int
+  regex := regexp.MustCompile("([0-9]+)")
+  found := regex.FindAllString(string(content), -1)
+  for _, f := range found {
+    nr, _ := strconv.Atoi(f)
+    stones = append(stones, nr)
+  }
+  return stones
+}
+
+func split_size(stone int) (int, int, bool) {
+  str := strconv.Itoa(stone)
+  if len(str)%2 == 0 {
+    prefix, _ := strconv.Atoi(str[:len(str)/2])
+    postfix, _ := strconv.Atoi(str[len(str)/2:])
+    return prefix, postfix, true
+  }
+  return -1, -1, false
+}
+
+func add_to_map(stones *map[int]int, key, val int) {
+  _, ok := (*stones)[key]
+  if ok {
+    (*stones)[key] += val
+  } else {
+    (*stones)[key] = val
+  }
+}
+
+func blink182(stones map[int]int, iter int) int {
+  for i := 0; i &lt; iter; i++ {
+    new_stones := make(map[int]int)
+    for key, val := range stones {
+      if val &gt; 0 {
+        prefix, postfix, even := split_size(key)
+        if key == 0 {
+          add_to_map(&amp;new_stones, 1, val)
+        } else if even {
+          add_to_map(&amp;new_stones, prefix, val)
+          add_to_map(&amp;new_stones, postfix, val)
+        } else {
+          add_to_map(&amp;new_stones, 2024*key, val)
+        }
+      }
+    }
+    stones = new_stones
+  }
+  sum := 0
+  for _, val := range stones {
+    sum += val
+  }
+  return sum
+}
+
+func count_all(iter int) int {
+  stones := read_file("INPUT")
+  m := make(map[int]int)
+  for _, stone := range stones {
+    add_to_map(&amp;m, stone, 1)
+  }
+  return blink182(m, iter)
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  result = count_all(25)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  result = count_all(75)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 11 - Plutonian Pebbles")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-11.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-10.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -203,11 +282,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-11.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-10.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
